--- a/index.html
+++ b/index.html
@@ -5,22 +5,41 @@
 <title>Price Watch | Live Global Markets</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{margin:0;font-family:Arial;background:#0f172a;color:#fff}
-header{padding:20px;text-align:center;font-size:26px;font-weight:bold;background:#020617}
-.tabs{display:flex;gap:10px;justify-content:center;flex-wrap:wrap;background:#020617;padding:10px}
-.tab{padding:8px 14px;border-radius:6px;border:none;cursor:pointer;background:#1e293b;color:#fff}
-.tab.active{background:#38bdf8;color:#000}
-.section{display:none;padding:20px}
-.section.active{display:block}
-table{width:100%;border-collapse:collapse}
-th,td{padding:10px;border-bottom:1px solid #1e293b;text-align:left}
-th{color:#38bdf8}
-.search{margin:15px auto;display:block;width:300px;padding:10px;border-radius:6px;border:none}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(350px,1fr));gap:20px}
-.box{background:#020617;border-radius:14px;height:450px;position:relative;overflow:hidden}
-iframe{width:100%;height:100%;border:none}
-.full{position:absolute;top:10px;right:3cm;padding:6px;border:none;border-radius:5px;background:#38bdf8;cursor:pointer;z-index:10}
+body{margin:0;font-family:Arial;background:#0f172a;color:#fff;}
+header{padding:20px;text-align:center;font-size:26px;font-weight:bold;background:#020617;}
+.tabs{display:flex;gap:10px;justify-content:center;flex-wrap:wrap;background:#020617;padding:10px;}
+.tab{padding:8px 14px;border-radius:6px;border:none;cursor:pointer;background:#1e293b;color:#fff;}
+.tab.active{background:#38bdf8;color:#000;}
+.section{display:none;padding:20px;}
+.section.active{display:block;}
+table{width:100%;border-collapse:collapse;}
+th,td{padding:10px;border-bottom:1px solid #1e293b;text-align:left;}
+th{color:#38bdf8;}
+.search{margin:15px auto;display:block;width:300px;padding:10px;border-radius:6px;border:none;}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(350px,1fr));gap:20px;}
+.box{background:#020617;border-radius:14px;height:450px;position:relative;overflow:hidden;}
+iframe{width:100%;height:100%;border:none;}
+.full{
+  position:absolute;
+  top:10px;
+  right:calc(10px + 3cm);
+  padding:6px;
+  border:none;
+  border-radius:5px;
+  background:#38bdf8;
+  cursor:pointer;
+  z-index:10;
+  transition: all 0.3s ease;
+}
 </style>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LBESTBMXTK"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-LBESTBMXTK');
+</script>
 </head>
 <body>
 
@@ -79,9 +98,29 @@ document.querySelectorAll(".tab").forEach(b=>{
   }
 });
 
-// Fullscreen
-document.querySelectorAll(".full").forEach(b=>{
-  b.onclick=()=>{b.parentElement.requestFullscreen();}
+// Fullscreen buttons + dynamic color
+document.querySelectorAll(".full").forEach(btn=>{
+  btn.addEventListener("click", function(){
+    const chartBox = this.parentElement;
+    if(!document.fullscreenElement){
+      chartBox.requestFullscreen().catch(err=>{
+        alert("Fullscreen failed: " + err.message);
+      });
+    } else {
+      document.exitFullscreen();
+    }
+  });
+  // Dynamic color based on body background
+  const updateColor = () => {
+    let bg = window.getComputedStyle(document.body).backgroundColor;
+    const brightness = (c) => {
+      const rgb = c.match(/\d+/g);
+      return (parseInt(rgb[0])*299 + parseInt(rgb[1])*587 + parseInt(rgb[2])*114)/1000;
+    };
+    btn.style.background = brightness(bg) < 128 ? "#38bdf8" : "#0f172a";
+    btn.style.color = brightness(bg) < 128 ? "#000" : "#fff";
+  };
+  updateColor();
 });
 
 // CRYPTO LIVE
@@ -110,7 +149,7 @@ async function loadForex(){
 }
 loadForex(); setInterval(loadForex,60000);
 
-// Search
+// Search filter
 document.getElementById("search").addEventListener("input", function(){
   let val=this.value.toLowerCase();
   document.querySelectorAll("#cryptoTable tr,#forexTable tr").forEach(tr=>{
